- Altered error handling message for maps. - Fixed alignment issue with radio buttons on maps and job folders.

--- a/Master/bandocat_custom_bootstrap.css
+++ b/Master/bandocat_custom_bootstrap.css
@@ -128,3 +128,12 @@ body {
     clear:both;
     padding-top:20px;
 }/*
+
+/*********************** Aligning radio buttons and respective text fields ***********************/
+
+.radioButton{
+    margin-top: 10px;
+}
+
+
+/*********************************************************************************/
